fixed explain text bottom margin to be responsive on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -86,6 +86,7 @@ button:hover {
 /* Explanation text styles */
 #explain-game {
   margin-top: 20px;
+  margin-bottom: 20px;
 }
 
 /* Footer styles */
